# terminal-api

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  scratch.json  scratch2.json  sitemap.xml
.github/workflows/: ci.yml
assets/css/: style.css
auth/: index.html
cash_in/: index.html
cash_in/cheque_generation/: index.html
cash_in/details/: index.html
cash_in/flow/: index.html
daily/: index.html
daily/constants/: index.html
daily/faq/: index.html
daily/payments/: index.html
daily/reports/: index.html
docs/: idempotency.md  index.md  notes.txt  requests.md  responses.md  scratch.json  scratch2.json  types.md
docs/auth/: index.md
docs/cash_in/: cash_in.md  cheque_generation.md  details.md  flow.md  index.md
docs/daily/: constants.md  faq.md  fees.md  index.md  payments.md  reports.md
docs/fees/: fees.md  index.md  policies.md
docs/payments/: available_payments.md  categories.md  check_credentials.md  cheque_generation.md  create.md  flow.md  get.md  get_payment_schema.md  index.md  payment_schema.md  payments.md  schema.md
docs/reports/: consolidated.md  cross_check.md  index.md
docs/transactions/: cash_in.md  send_payment.md  status_by_external_id.md  status_by_internal_id.md  statuses.md
docs/users/: create_order.md  retrieve.md
fees/: index.html
fees/fees/: index.html
fees/policies/: index.html
idempotency/: index.html
payments/: index.html
payments/categories/: index.html
reports/: index.html
requests/: index.html
responses/: index.html
search/: search_index.json
types/: index.html
(+13 files in other folders)
